--- a/index.html
+++ b/index.html
@@ -25,88 +25,155 @@
     <!-- Fav-icon (Image) -->
     <link rel="icon" type="image/ico" href="./Images/FB.ico" />
 
-    <!-- Stylesheet -->
+    <!-- Stylesheet Link -->
     <link rel="stylesheet" href="style.css" />
-
-    <!-- Bootstrap CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
-      crossorigin="anonymous"
-    />
-
-    <!-- Bootstrap JS -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
-      crossorigin="anonymous"
-    ></script>
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="value.html">Link</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Dropdown
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><hr class="dropdown-divider" /></li>
-                <li>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </li>
-              </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-            </li>
-          </ul>
-          <form class="d-flex" role="search">
-            <input
-              class="form-control me-2"
-              type="search"
-              placeholder="Search"
-              aria-label="Search"
-            />
-            <button class="btn btn-outline-success" type="submit">
-              Search
-            </button>
-          </form>
-        </div>
-      </div>
-    </nav>
+    <section id="sec">
+      <ul>
+        <li>
+          <a href="https://github.com/">Home</a>
+        </li>
+        <li><a href="https://github.com/">About US</a></li>
+        <li><a href="#MyOrder">Contact</a></li>
+      </ul>
+    </section>
+    <header>
+      <h1>HOME</h1>
+      <a style="text-decoration: none" href="index.html">Home</a>
+      <p>I am Software Developer</p>
+    </header>
 
-    <div class="spinner-border" role="status">
-      <span class="visually-hidden">Loading...</span>
+    <div>
+      <a style="text-decoration: none" href="https://github.com/">GitHub</a>
     </div>
+
+    <div>
+      <img src="./Images/FB.ico" alt="Thats my ICON Image" />
+    </div>
+
+    <div>
+      <table
+        border="10"
+        style="border-collapse: collapse; width: 100%; text-align: left"
+      >
+        <thead>
+          <tr style="text-align: center">
+            <th>Name</th>
+            <th>Degree</th>
+            <th>Programming</th>
+            <th>Domain</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Dhamu</td>
+            <td>BE</td>
+            <td>C</td>
+            <td>.Net</td>
+          </tr>
+          <tr>
+            <td>Dhamu</td>
+            <td>BE</td>
+            <td>C</td>
+            <td>.Net</td>
+          </tr>
+          <tr>
+            <td>Dhamu</td>
+            <td>BE</td>
+            <td>C</td>
+            <td>.Net</td>
+          </tr>
+          <tr>
+            <td>Dhamu</td>
+            <td>BE</td>
+            <td>C</td>
+            <td>.Net</td>
+          </tr>
+          <tr>
+            <td>Dhamu</td>
+            <td>BE</td>
+            <td>C</td>
+            <td>.Net</td>
+          </tr>
+          <tr>
+            <td>Dhamu</td>
+            <td>BE</td>
+            <td>C</td>
+            <td>.Net</td>
+          </tr>
+          <tr>
+            <td>Dhamu</td>
+            <td>BE</td>
+            <td>C</td>
+            <td>.Net</td>
+          </tr>
+          <tr>
+            <td>Dhamu</td>
+            <td>BE</td>
+            <td>C</td>
+            <td>.Net</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+
+    <div>
+      <ul>
+        <li>C Programming</li>
+        <li>C++ Programmin</li>
+        <li>Java Programming</li>
+        <li>Python Programmin</li>
+        <li>c# Programming</li>
+        <li>Java Script Programming</li>
+      </ul>
+    </div>
+
+    <div id="MyOrder">
+      <ol type="1" start="5">
+        <li>C Programming</li>
+        <li>C++ Programmin</li>
+        <li>Java Programming</li>
+        <li>Python Programmin</li>
+        <li>c# Programming</li>
+        <li>Java Script Programming</li>
+      </ol>
+    </div>
+    <!-- l=tk.Label(tk,text="Name") -->
+    <!-- e=tk.Entry(tk) -->
+    <!-- e.get() -->
+    <section>
+      <form action="#" method="get">
+        <div>
+          <label for="Name">Name</label>
+          <input
+            type="text"
+            name="Name"
+            id="Name"
+            placeholder="Dhamu"
+            value="Dhamu"
+          />
+        </div>
+        <div>
+          <label for="Degree">Degree</label>
+          <input type="date " name="Degree" id="Degree" />
+        </div>
+        <div>
+          <label for="pass">Password</label>
+          <input type="password" name="password" id="pass" required />
+        </div>
+        <div>
+          <button type="submit">SEND</button>
+        </div>
+        <div>
+          <button type="reset">Clear Datas</button>
+        </div>
+      </form>
+    </section>
+
+    <!-- Dhamu  string name="Dhamu"-->
+
+    <!-- Call by using ID -->
   </body>
 </html>
